--- a/src/config/globals.css
+++ b/src/config/globals.css
@@ -80,7 +80,7 @@
 [data-theme='dark'] {
   --background: hsl(220, 5%, 8%);
   --foreground: hsl(0, 0%, 100%);
-  --card: hsl(220, 5%, 8%);
+  --card: hsl(220, 5%, 12%);
   --card-foreground: hsl(0, 0%, 100%);
   --popover: hsl(220, 5%, 8%);
   --popover-foreground: hsl(0, 0%, 100%);
@@ -121,11 +121,22 @@
   }
 }
 
-/* Font Family */
 html {
   font-family:
     -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica,
     Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+}
+
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+
+  margin: 0;
+  padding: 0;
 }
 
 pre,
