feat(globals.css): Add flex display for mrow elements
- Implemented flex display for mrow elements to improve layout.
- Enhanced alignment and wrapping of content within mrow elements.

--- a/src/app/(resources)/globals.css
+++ b/src/app/(resources)/globals.css
@@ -290,4 +290,11 @@ samp {
   ul {
     @apply my-4 list-inside list-disc;
   }
+
+  mrow {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    width: fit-content;
+  }
 }
