style(globals): Update selection styles for better visibility
- Added custom styles for text selection in light and dark themes.
- Improved user experience by enhancing the visibility of selected text.

--- a/src/app/(resources)/globals.css
+++ b/src/app/(resources)/globals.css
@@ -180,6 +180,14 @@ samp {
   scrollbar-width: thin;
 }
 
+html::selection {
+  @apply bg-black/20;
+}
+
+html[data-theme='dark']::selection {
+  @apply bg-white/20;
+}
+
 .prose {
   h1 {
     @apply text-3xl font-bold;
