--- a/src/app/(resources)/globals.css
+++ b/src/app/(resources)/globals.css
@@ -1,7 +1,5 @@
 @import 'tailwindcss';
 
-@custom-variant dark (&:is([data-theme='dark'] *));
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -44,7 +42,7 @@
 :root {
   --background: rgb(255, 255, 255);
   --foreground: rgb(51, 51, 51);
-  --card: rgb(255, 255, 255);
+  --card: rgb(245, 245, 245);
   --card-foreground: rgb(51, 51, 51);
   --popover: rgb(255, 255, 255);
   --popover-foreground: rgb(51, 51, 51);
@@ -75,41 +73,6 @@
   --sidebar-accent-foreground: rgb(66, 153, 225);
   --sidebar-border: rgb(229, 231, 235);
   --sidebar-ring: rgb(203, 213, 225);
-}
-
-[data-theme='dark'] {
-  --background: hsl(220, 5%, 8%);
-  --foreground: hsl(0, 0%, 100%);
-  --card: hsl(220, 5%, 12%);
-  --card-foreground: hsl(0, 0%, 100%);
-  --popover: hsl(220, 5%, 8%);
-  --popover-foreground: hsl(0, 0%, 100%);
-  --primary: hsl(207, 90%, 57%);
-  --primary-foreground: hsl(207, 73%, 57%);
-  --secondary: hsl(221, 14%, 55%);
-  --secondary-foreground: hsl(0, 0%, 100%);
-  --muted: hsl(221, 14%, 55%);
-  --muted-foreground: hsl(213, 27%, 84%);
-  --accent: hsl(221, 14%, 55%);
-  --accent-foreground: hsl(0, 0%, 100%);
-  --destructive: hsl(213, 27%, 84%);
-  --destructive-foreground: hsl(0, 0%, 100%);
-  --border: hsla(0, 0%, 100%, 0.1);
-  --input: hsla(0, 0%, 100%, 0.15);
-  --ring: hsla(0, 0%, 100%, 0.25);
-  --chart-1: hsl(210, 100%, 80%);
-  --chart-2: hsl(30, 100%, 70%);
-  --chart-3: hsl(0, 100%, 70%);
-  --chart-4: hsl(36, 100%, 50%);
-  --chart-5: hsl(160, 100%, 70%);
-  --sidebar: hsl(207, 73%, 57%);
-  --sidebar-foreground: hsl(0, 0%, 100%);
-  --sidebar-primary: hsl(210, 100%, 80%);
-  --sidebar-primary-foreground: hsl(0, 0%, 100%);
-  --sidebar-accent: hsl(221, 14%, 55%);
-  --sidebar-accent-foreground: hsl(0, 0%, 100%);
-  --sidebar-border: hsla(0, 0%, 100%, 0.1);
-  --sidebar-ring: hsla(0, 0%, 100%, 0.25);
 }
 
 @layer base {
@@ -184,10 +147,6 @@ html::selection {
   @apply bg-black/20;
 }
 
-html[data-theme='dark']::selection {
-  @apply bg-white/20;
-}
-
 .prose {
   h1 {
     @apply text-3xl font-bold;
@@ -218,53 +177,67 @@ html[data-theme='dark']::selection {
   }
 
   :not(pre) > code {
-    @apply bg-card text-primary mx-0.5 rounded px-2 py-1 text-xs;
+    @apply bg-card mx-0.5 rounded px-1 py-0.5 text-xs font-bold;
+    @apply border-border border shadow-inner;
   }
 
-  figure:has(pre) {
-    @apply relative;
-  }
+  figure {
+    &:has(pre) {
+      @apply relative;
+    }
 
-  pre {
-    @apply text-primary my-2 rounded;
-  }
+    pre {
+      @apply text-primary bg-secondary rounded-tr rounded-b;
+      @apply border-border border shadow-inner;
+      @apply mt-10 mb-4 py-2;
+    }
 
-  pre code span[data-line] {
-    @apply px-2;
-  }
+    pre code span[data-line] {
+      @apply px-2;
+    }
 
-  figcaption[data-rehype-pretty-code-title] {
-    @apply absolute top-0 left-0 z-10;
-    @apply bg-neutral-700 px-2 py-1 text-neutral-200;
-    @apply text-sm;
-    @apply content-[attr(data-language)];
-    @apply rounded-tl rounded-br;
-  }
+    /**
+     * Code title
+     */
+    figcaption[data-rehype-pretty-code-title],
+    pre[data-language]::before {
+      @apply absolute bottom-full left-0;
+      @apply border border-neutral-200 bg-neutral-100 px-2 py-0.5 text-neutral-700;
+      @apply text-sm font-bold;
+      @apply content-[attr(data-language)];
+      @apply rounded-t;
+    }
+    figcaption[data-rehype-pretty-code-title] {
+      @apply z-10;
+    }
+    pre[data-language]::before {
+      @apply uppercase;
+    }
+    figcaption[data-rehype-pretty-code-title] + pre:before {
+      @apply hidden;
+    }
 
-  figcaption[data-rehype-pretty-code-title] + pre:before {
-    @apply content-[''];
-  }
+    /**
+     * Line highlighting & Character highlighting
+     */
+    pre span mark,
+    pre span[data-highlighted-line],
+    pre span[data-highlighted-chars] {
+      @apply bg-chart-1/30;
+    }
 
-  figcaption[data-rehype-pretty-code-title] + pre,
-  pre[data-language] {
-    @apply relative pt-8;
-  }
-
-  figcaption[data-rehype-pretty-code-title] + pre {
-    @apply my-4;
-  }
-
-  pre[data-language]::before {
-    @apply absolute top-0 left-0;
-    @apply bg-neutral-700 px-2 py-1 text-neutral-200;
-    @apply text-sm uppercase;
-    @apply content-[attr(data-language)];
-    @apply rounded-tl rounded-br;
-  }
-
-  pre span mark,
-  pre span[data-highlighted-line] {
-    @apply bg-chart-4/8;
+    /**
+     * Line numbers
+     */
+    code[data-line-numbers] {
+      counter-reset: line;
+    }
+    code[data-line-numbers] > [data-line]:before {
+      counter-increment: line;
+      content: counter(line);
+      @apply border-border mr-1 inline-block w-4 border-r-2 pr-2;
+      @apply text-right text-xs;
+    }
   }
 
   table {
@@ -297,6 +270,10 @@ html[data-theme='dark']::selection {
   ol,
   ul {
     @apply my-4 list-inside list-disc [ol_&]:ml-4 [ul_&]:ml-4;
+
+    & > li > p {
+      @apply inline-block;
+    }
   }
 
   blockquote {
